@@ -88,7 +88,8 @@ The command `tty` in ruri might say that "not a tty".
 If you need to run some program like `gpg`, please use `script -q -O /dev/null` in container.      
 # About runtime dirs:
 ruri will create /dev/, /sys/ and /proc/ after chroot(2) into container for better security. You can use `-S` option to force it to bind-mount system runtime dirs.      
-# About cross-arch container:
+# About multi-arch container:
+Yes, you can run multi-arch containers via ruri if your device support.      
 It needs CONFIG_BINFMT_MISC enabled in your kernel config.      
 You need to copy qemu-*-static to your container first.      
 The path of qemu is the absolute path of qemu binary in the chroot container, for example, you have a qemu binary at `/path/to/container/qemu-amd64-static`, use `-a x86_64 -q /qemu-amd64-static` arguments to start the container.
